--- a/success.html
+++ b/success.html
@@ -7,25 +7,19 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>首页</title>
     <link href="css/base.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/success.css" rel="stylesheet">
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="flexible/index.js"></script>
 </head>
 <body>
-<div class="header-title">
-    <img  src="image/title_2.png" alt="">
-</div>
-<div class="header-body">
-    <img  src="image/slogan_2.png" alt="">
-</div>
-<div class="header-content">
-    <img src="image/index_active.png" alt="">
-</div>
-
-<div class="header-footer">
-    <img src="image/start_answer.png" alt="">
+<div class="cover">
+    <div class="content">
+        <h2>恭喜</h2>
+        <p>你已答对所有题目</p>
+        <p> 请将此页面向工作人员展示</p>
+    </div>
 </div>
 
 </body>
