--- a/error.html
+++ b/error.html
@@ -7,26 +7,17 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>首页</title>
     <link href="css/base.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/error.css" rel="stylesheet">
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="flexible/index.js"></script>
 </head>
 <body>
-<div class="header-title">
-    <img  src="image/title_2.png" alt="">
+<div class="cover">
 </div>
-<div class="header-body">
-    <img  src="image/slogan_2.png" alt="">
+<div class="content">
+    <h2>重新答题</h2>
 </div>
-<div class="header-content">
-    <img src="image/index_active.png" alt="">
-</div>
-
-<div class="header-footer">
-    <a href="question.html"><img src="image/start_answer.png" alt=""></a>
-</div>
-
 </body>
 </html>
