--- a/question.html
+++ b/question.html
@@ -34,4 +34,57 @@
     </ul>
 </div>
 </body>
+<script>
+
+var dataList=[" 1949 年 9 月 21 日， 毛泽东在中国人民政治协商会议第一届全体会议上发\r\n表的开幕词是（ C ） 。\r\nA《中国革命和中国共产党》\r\nB《论人民民主专政》\r\nC《中国人民站起来了 》\r\n", " 第一部中华人民共和国宪法颁布于（ B ） 年。\r\nA. 1953  B. 1954  C. 1956\r\n", " 《实践是检验真理的唯一标准》 一文首先发表于下列哪种报纸上（ B）\r\nA 人民日报 B 光明日报 C 文汇报 D 解放军报\r\n", " 实现___B___， 就是中华民族近代以来最伟大的梦想。\r\nA. 四个现代化\r\nB. 中华民族伟大复兴\r\nC. 全面建成小康社会\r\n", " 中国梦的基本内涵是实现___A___。\r\nA. 国家富强、 民族振兴、 人民幸福\r\nB. 国家强大、 民族振兴\r\nC. 经济发展、 社会和谐\r\n", " ___A___是当代中国发展进步的根本方向， 是实现中国梦的必由之路， 也\r\n是引领我国工人阶级走向更加光明未来的必由之路。\r\nA. 中国特色社会主义\r\nB. 民族振兴\r\nC. 富国强兵\r\n", " ___B ___是中国特色社会主义的根本任务， 所以必须坚持以经济建设为\r\n中心， 以科学发展为主题， 实现以人为本、 全面协调可持续的科学发展。\r\nA. 发展经济\r\nB. 解放和发展社会生产力\r\nC. 发展生产\r\n", " 新中国颁布的第一部法律是（ C）\r\nA《宪法》  B《刑法》  C《婚姻法》  D《土地改革法》\r\n", " 社会主义制度在中国确立的主要标志是（ D）\r\nA 中华人民共和国的成立\r\nB 第一个五年计划的完成\r\nC 中华人民共和国宪法的颁布 \r\nD 三大改造的胜利完成\r\n", " 1953-1956 年我国民主政治建设取得重大进展， 其表现是（ A ） 。\r\nA. 人民代表大会制度建立 \r\nB. 过渡时期总路线公布 \r\nC. 全国政协成立\r\n", " 1915 年 9 月 ， 陈独秀在上海创办了（ B ） ， 从此拉开了 近代中国第一次思想解放运动——新文化运动的序幕。\r\nA. 《新青年》  B. 《青年杂志》  C. 《青春》\r\n", " 1931 年 11 月 ， 第一次全国苏维埃代表大会召开的地点是 （A ） 。\r\nA、瑞金  B、兴国  C 、延安\r\n", " 我国第一个五年计划完成于（ B ） 。\r\nA. 大跃进时期 \r\nB. 全面进行社会主义建设时期 \r\nC. 社会主义改造时期\r\n", " 第（ A ） 届全国人民代表大会提出了 “四个现代化” 的宏伟目标。\r\nA. 三 \r\nB. 四 \r\nC. 五\r\n", " 2008 年 9 月 ， 我国神舟七号载人航天飞行取得圆满成功。 这标志着我国载人航天工程“三步走战略” 的第二步取得突破性进展， 我国由此成为世界上（ B ） 独立掌握空间出舱关键技术的国家。\r\nA. 第二个 \r\nB. 第三个 \r\nC. 第四个\r\n", " 中央人民政府正式宣布五月 四日为“青年节” 是在（ B ） 年。\r\nA. 1921\r\nB. 1949 \r\nC. 1953\r\n", " 我国第一颗原子弹于 ( B ) 爆炸成功。\r\nA  1963 年 \r\nB  1964 年 \r\nC  1965 年 \r\nD  1966 年\r\n", " 我国的基本民族政策是 ( A )\r\nA  实行民族区域自治 \r\nB  实现各民族共同繁荣\r\nC  民族不分大小一律平等 \r\nD  反对大民族主义和地方民族主义\r\n", " 把毛泽东思想确立为我们党的指导思想的会议是 ( A ) 。\r\nA  党的七大 \r\nB  七届二中全会 \r\nC  六届七中全会\r\n20.  邓小平同志首次提出“解放思想、 实事求是” 是在（ B）\r\nA  1977 年党的十届三中全会上 \r\nB  1978 年中央工作会议上\r\nC  1978 年全军政治工作会议上 \r\nD  1978 年党的十一届三中全会上\r\n", " 中国改革的第一个突破口 是（ A）\r\nA  农村改革 \r\nB  城市改革 \r\nC  国有企业改革 \r\nD  发展个体、 私营经济\r\n", " 党的（Ｃ ） 首次使用“邓小平理论” 这个科学称谓。\r\nＡ 十三大 Ｂ 十四大 Ｃ 十五大 Ｄ 十六大\r\n", " 第一个与新中国建交的西方大国是（ C ） ， 对中国加强同西欧的关系起\r\n到了 重要作用。\r\nA. 英国  B. 德国  C. 法国\r\n", " 恢复中华人民共和国在联合国的合法席位是在（ B ） 年。\r\nA. 1970   B. 1971   C. 1972\r\n", " 第一个支持恢复中国在联合国合法席位、 第一个就中国加入世贸组织与\r\n中方签署双边协议的拉美国家是（ B ） 。\r\nA. 巴西  B. 智利  C. 古巴\r\n", " 新中国外交政策成熟的标志是（ A ）\r\nA. 1953 年提出的和平共处五项原则 \r\nB. 1955 年提出的“求同存异” 方针\r\nC. 1970 年代形成的关于三个世界划分的理论\r\n", " 1979 年 1 月 1 日， 中国与（ B ） 互相承认并建立大使级外交关系， 从\r\n而结束了 两国关系的长期不正常状态。\r\nA. 美国 B. 日本 C. 加拿大\r\n", " 1984 年 5 月 召开的（ A ） 正式批准了 “一国两制” 的构想， 标志着这一科学思想正式成为和平统一祖国的基本国策。\r\nA. 六届人大二次会议 \r\nB. 六届人大三次会议 \r\nC. 十二届三中全会\r\n", " 1997 年（ B ） ， 我国恢复行使对香港的主权， 标志着“一国两制” 构\r\n想的巨大成功， 标志着中国人民在完成祖国统一大业道路上迈出了 重要的一步。\r\nA. 6 月 1 日 \r\nB. 7 月 1 日 \r\nC. 8 月 1 日\r\n", " （ B ） 年 1 月 21 日， 第六届全国人大第九次会议正式通过国务院关于建立教师节的议案， 并决定 9 月 10 日为我国的教师节。\r\nA. 1984  B. 1985  C. 1986\r\n", " 1986 年 3 月 3 日， 王大珩等四位科学家给中共中央写信， 提出要跟踪世界先进水平， 发展我国高技术的建议。 （ B ） 当即批示“此事宜速作决断。 不可拖延” 。 后来， 中共中央、 国务院批准了 《高技术研究发展计划（“863” 计划） 纲要》 。\r\nA. 胡耀邦 B. 邓小平 C. 陈云\r\n", " 2001 年 12 月 11 日， 中国正式加入世界贸易组织（WTO） ， 成为第（ B ）个成员。\r\nA. 133 \r\nB. 143\r\n C. 153\r\n", " 系统阐述社会主义初级阶段理论的会议是（ C ） 。\r\nA. 党的十二大 \r\nB. 党的十二届六中全会 \r\nC. 党的十三大\r\n", " 党的（ C ） 明确指出： “我国经济体制改革的目 标是建立社会主义市场经济体制” 。\r\nA. 十三大 \r\nB. 十三届六中全会 \r\nC. 十四大\r\n", " 1997 年 9 月 ， 党的十五大把邓小平理论确立为党的（ B ） 并写进党章。\r\nA. 指导方针 \r\nB. 指导思想 \r\nC. 战略思想\r\n", " 2002 年 11 月 ， 党的十六大提出全面建设（ A ） 的奋斗目 标， 把“三个代表” 重要思想同马克思列宁主义、 毛泽东思想、 邓小平理论一道确立为党必须长期坚持的指导思想。\r\nA. 小康社会 \r\nB. 法治社会 \r\nC. 和谐社会\r\n", " 1971 年毛泽东、 周恩来邀请美国一球队的队员访华， 展开了 著名的（C）\r\nA、 篮球外交\r\nB、 足球外交\r\nC、 乒乓外交\r\nD、 网球外交\r\n", " 1971 年 10 月 25 日， 在美国纽约联合国总部举行的第 (B) 届联大会上，\r\n恢复新中国在联大的合法席位和驱逐台湾当局代表的提案， 以压倒多数被通过。\r\nA、 25\r\nB、 26\r\nC、 27\r\nD、 28\r\n", " 十九大的主题是：不忘初心，（B），高举中国特色社会主义伟大旗帜，决胜全面建成小康社会，夺取新时代中国特色社会主义伟大胜利，为实现中华民族伟大复兴的中国梦不懈奋斗。\r\nA.继续向前  \r\nB.牢记使命  \r\nC.方得始终  \r\nD.砥砺前行\r\n", " 文革后恢复高考的第一次考试， 有 570 万名考生走进了 考场， 考试的时\r\n间为(C)\r\nA、 1977 年夏\r\nB、 1977 年秋\r\nC、 1977 年冬\r\nD、 1978 年春\r\n", " 1982 年 9 月 ， 邓小平会见当时英国首相时， 公开提出了“一国两制” 的\r\n构想。 这位首相的名字是(B)\r\nA、 梅 杰\r\nB、 撒切尔夫人\r\nC、 布莱尔\r\nD、 希 思\r\n", " 中国加入世贸组织（WTO） 的时间是(B)\r\nA、 2002 年\r\nB、 2001 年\r\nC、 2000年\r\nD、 1999 年\r\n", " 2008 年， 中国体育代表团在 29 届北京奥运会上， 获得 （ A ） 枚\r\n金牌， 名列奖牌榜（ ） 。\r\nA、 51， 第一名\r\nB、 41， 第二名\r\nC、 31， 第三名\r\nD、 21， 第四名\r\n", " 1984 年 5 月 召开的（ A ） 正式批准了 “一国两制” 的构想， 标志着这\r\n一科学思想正式成为和平统一祖国的基本国策。\r\nA. 六届人大二次会议 B. 六届人大三次会议 C. 十二届三中全会\r\n", " 1997 年（ B ） ， 我国恢复行使对香港的主权， 标志着“一国两制” 构\r\n想的巨大成功， 标志着中国人民在完成祖国统一大业道路上迈出了 重要的一步。\r\nA. 6 月 1 日  \r\nB. 7 月 1 日  \r\nC. 8 月 1 日\r\n", " （ B ） 年 1 月 21 日， 第六届全国人大第九次会议正式通过国务院关于建立教师节的议案， 并决定 9 月 10 日为我国的教师节。\r\nA. 1984   B. 1985   C. 1986\r\n", " 系统阐述社会主义初级阶段理论的会议是（ C ） 。\r\nA. 党的十二大 \r\nB. 党的十二届六中全会 \r\nC. 党的十三大\r\n", " 党的（ C ） 明确指出： “我国经济体制改革的目 标是建立社会主义市场经济体制” 。\r\nA. 十三大 \r\nB. 十三届六中全会 \r\nC. 十四大\r\n", " 邓小平指的第一生产力指的是（D）\r\nA. 指导方针 \r\nB. 指导思想 \r\nC. 战略思想 \r\nD. 科学技术\r\n", " 被国际奥委会主席称为“一届真正的无与伦比的奥运会” 的是（ A ） 。\r\nA. 北京奥运会 \r\nB. 悉尼奥运会 \r\nC. 汉城奥运会\r\n"];
+
+var selectList = getRandomArrayElements(dataList,4)
+console.log(dataList);
+setCookie(1,selectList[0]);
+console.log(getCookie(1));
+
+
+
+
+function getRandomArrayElements(arr, count) {
+    var shuffled = arr.slice(0), i = arr.length, min = i - count, temp, index;
+    while (i-- > min) {
+        index = Math.floor((i + 1) * Math.random());
+        temp = shuffled[index];
+        shuffled[index] = shuffled[i];
+        shuffled[i] = temp;
+    }
+    return shuffled.slice(min);
+}
+//写cookies
+
+function setCookie(name,value)
+{
+    var Days = 30;
+    var exp = new Date();
+    exp.setTime(exp.getTime() + Days*24*60*60*1000);
+    document.cookie = name + "="+ escape (value) + ";expires=" + exp.toGMTString();
+}
+//读取cookies
+function getCookie(name)
+{
+    var arr,reg=new RegExp("(^| )"+name+"=([^;]*)(;|$)");
+
+    if(arr=document.cookie.match(reg))
+
+        return unescape(arr[2]);
+    else
+        return null;
+}
+
+//删除cookies
+function delCookie(name)
+{
+    var exp = new Date();
+    exp.setTime(exp.getTime() - 1);
+    var cval=getCookie(name);
+    if(cval!=null)
+        document.cookie= name + "="+cval+";expires="+exp.toGMTString();
+}
+</script>
 </html>
