--- a/success.html
+++ b/success.html
@@ -15,12 +15,14 @@
 </head>
 <body>
 <div class="cover">
-    <div class="content">
-        <h2>恭喜</h2>
-        <p>你已答对所有题目</p>
-        <p> 请将此页面向工作人员展示</p>
-    </div>
 </div>
-
+<div class="close">
+    <img src="image/close.png" alt="">
+</div>
+<div class="content">
+    <h2>恭喜 !</h2>
+    <p>你已答对所有题目</p>
+    <p> 请将此页面向工作人员展示</p>
+</div>
 </body>
 </html>
