--- a/error.html
+++ b/error.html
@@ -17,7 +17,7 @@
 <div class="cover">
 </div>
 <div class="content">
-    <h2>重新答题</h2>
+    <a href="question.html"><h2>重新答题</h2></a>
 </div>
 </body>
 </html>
