--- a/question.html
+++ b/question.html
@@ -150,9 +150,183 @@ var dataList= [
                  "全国政协成立"
             ],
             "correct": "1"
-        }
+        },
+        {
+            "title": "  1931 年 11 月 ， 第一次全国苏维埃代表大会召开的地点是 （ ） 。",
+            "option":
+                [ " 瑞金",
+                    "兴国",
+                    "延安"
+                ],
+            "correct": "1"
+        },
+        {
+            "title": " 我国第一个五年计划完成于（  ） 。",
+            "option":
+                [ "  大跃进时期 ",
+                    "全面进行社会主义建设时期",
+                    "社会主义改造时期"
+                ],
+            "correct": "1"
+        },
+        {
+            "title": " 第（  ） 届全国人民代表大会提出了 “四个现代化” 的宏伟目标。",
+            "option":
+                [ " 三",
+                    "四",
+                    "五"
+                ],
+            "correct": "1"
+        },
+    {
+        "title": "  2008 年 9 月 ， 我国神舟七号载人航天飞行取得圆满成功。 这标志着我国载人航天工程“三步走战略” 的第二步取得突破性进展， 我国由此成为世界上（  ） 独立掌握空间出舱关键技术的国家。",
+        "option":
+            [ "  第二个",
+                " 第三个",
+                " 第四个"
+            ],
+        "correct": "1"
+    }  ,
+    {
+        "title": " 中央人民政府正式宣布五月 四日为“青年节” 是在（  ） 年。",
+        "option":
+            [ "1921",
+                "1949 ",
+                "1953"
+            ],
+        "correct": "1"
+    },
+    {
+        "title": "我国第一颗原子弹于 (  ) 爆炸成功。",
+        "option":
+            [ "  1963 年",
+                "1964 年 ",
+                "1965 年",
+                " 1966 年"
+            ],
+        "correct": "1"
+    },
+    {
+        "title": " 我国的基本民族政策是 (  )",
+        "option":
+            [ "实行民族区域自治 ",
+                "实现各民族共同繁荣 ",
+                "民族不分大小一律平等",
+                "反对大民族主义和地方民族主义"
+            ],
+        "correct": "1"
+    },
+    {
+        "title": " 把毛泽东思想确立为我们党的指导思想的会议是 (  ) 。",
+        "option":
+            [ "党的七大 ",
+                "七届二中全会 ",
+                "六届七中全会"
+            ],
+        "correct": "1"
+    },
+    {
+        "title": " 邓小平同志首次提出“解放思想 实事求是” 是在（ ）",
+        "option":
+            [ "1977 年党的十届三中全会上  ",
+                "1978 年中央工作会议上 ",
+                "1978 年全军政治工作会议上 ",
+                "1978 年党的十一届三中全会上"
+            ],
+        "correct": "1"
+    },
 
-    ]
+    {
+        "title": "中国改革的第一个突破口 是（ ）",
+        "option":
+            [ "农村改革",
+                "城市改革",
+                "国有企业改革 ",
+                " 发展个体 私营经济"
+            ],
+        "correct": "1"
+    },
+
+    {
+        "title": "党的（Ｃ ） 首次使用“邓小平理论” 这个科学称谓。",
+        "option":
+            [ "十三大  ",
+                "十四大 ",
+                "十五大 ",
+                "十六大s"
+            ],
+        "correct": "1"
+    },
+    {
+        "title": " 第一个与新中国建交的西方大国是（  ） ， 对中国加强同西欧的关系起到了 重要作用。",
+        "option":
+            [ "英国  ",
+                "德国 ",
+                "法国 "
+            ],
+        "correct": "1"
+    },
+    {
+        "title": " 恢复中华人民共和国在联合国的合法席位是在（  ） 年。",
+        "option":
+            [ "1970",
+                "1971 ",
+                "1972 "
+            ],
+        "correct": "1"
+    },
+
+    {
+        "title": "  第一个支持恢复中国在联合国合法席位 第一个就中国加入世贸组织与中方签署双边协议的拉美国家是（  ） 。",
+        "option":
+            [ "巴西",
+                "智利 ",
+                "古巴 "
+            ],
+        "correct": "1"
+    },
+    {
+        "title": "  新中国外交政策成熟的标志是（  ）",
+        "option":
+            [ "1953 年提出的和平共处五项原则",
+                "1955 年提出的“求同存异” 方针 ",
+                "1970 年代形成的关于三个世界划分的理论 "
+            ],
+        "correct": "1"
+    },
+
+    {
+        "title": " 1997 年（  ） ， 我国恢复行使对香港的主权， 标志着“一国两制” 构想的巨大成功， 标志着中国人民在完成祖国统一大业道路上迈出了 重要的一步。",
+        "option":
+            [ " 6 月 1 日 ",
+                " 7 月 1 日 ",
+                "8 月 1 日 "
+            ],
+        "correct": "1"
+    },
+    {
+        "title": "（  ） 年 1 月 21 日， 第六届全国人大第九次会议正式通过国务院关于建立教师节的议案， 并决定 9 月 10 日为我国的教师节。",
+        "option":
+            [ "1984",
+                "1985",
+                "1986 "
+            ],
+        "correct": "1"
+    },
+    {
+        "title": " 1986 年 3 月 3 日， 王大珩等四位科学家给中共中央写信， 提出要跟踪世界先进水平， 发展我国高技术的建议。 （  ） 当即批示“此事宜速作决断。 不可拖延” 。 后来， 中共中央 国务院批准了 《高技术研究发展计划（“863” 计划） 纲要》 。",
+        "option":
+            [ "胡耀邦",
+                "邓小平",
+                "陈云 "
+            ],
+        "correct": "1"
+    }
+
+
+
+
+]
 var selectList = makeRandomArr(dataList,4);
 var html ='';
 var keys = ['A','B','C','D'];
